# src/controllers/userController.js
@@ -1,4 +1,6 @@
+const { get } = require('mongoose');
 const { userModel } = require('../models/userModel');
+const { generateAccessToken, generateRefreshToken, refreshDuration, accessDuration } = require('../services/authorizationService');
 
 exports.listUsers = (req, res) => {
     userModel.find()
@@ -42,7 +44,35 @@ exports.createUser = (req, res) => {
 
 exports.updatePassword = (req, res) => {}
 exports.updateImage = (req, res) => {}
-exports.loginUser = (req, res) => {}
+exports.loginUser = (req, res) => {
+    // 1. Authenticate User (Mocked)
+    console.log(req);
+    const user = getUser(req.body.emailOrName, req.body.password);
+
+    // 2. Generate Tokens
+    const accessToken = generateAccessToken(user);
+    const refreshToken = generateRefreshToken(user);
+
+    // 3. Send Refresh Token as HttpOnly Cookie (Security Best Practice)
+    res.cookie('jwt', refreshToken, {
+        httpOnly: true, // JavaScript cannot access this (Prevents XSS)
+        secure: true,   // HTTPS only (use false for localhost testing)
+        sameSite: 'Strict',
+        maxAge: 30 * 24 * 60 * 60 * 1000 // 30 days
+    });
+
+    // 4. Send Access Token as JSON
+    res.json({ 
+        "accessToken": accessToken, 
+        "expiresIn": 1 * 60 * 60, // 1 hour in seconds
+        "tokenType": "Bearer"
+    });
+}
+
+getUser = (emailOrName, password) => {
+    return { id: 'user_123', role: 'admin' };
+}
+
 exports.refreshToken = (req, res) => {}
 exports.logoutUser = (req, res) => {}
 /*
